grammar.js
    program: $ => repeat($._statement),

    _statement: $ => prec(1, choice(
      $._expression_statement,
      $._declaration,
      $._method_statement
    )),

    _method_statement: $ => choice(
      $.labeled_statement,
      $.if_then_else_statement,
      $.while_statement,
      $.for_statement,
      $.block,
      $._semicolon,
      $.assert_statement,
      $.switch_statement,
      $.do_statement,
      $.break_statement,
      $.continue_statement,
      $.return_statement,
      $.synchronized_statement,
      $.throw_statement,
      $.try_statement
    ),

    _semicolon: $ => ';',

    _literal: $ => choice(
      $.integer_literal,
      $.floating_point_literal,
      $.boolean_literal,
      $.character_literal,
      $.string_literal,
      $.null_literal
    ),

    integer_literal: $ => choice(
      $.decimal_integer_literal,
      $.hex_integer_literal,
      $.octal_integer_literal,
      $.binary_integer_literal,
      $.long_integer_literal
    ),

    decimal_integer_literal: $ => DIGITS,

    boolean_literal: $ => choice($.true, $.false),

    true: $ => 'true',

    string_literal: $ => token(choice(
      seq('"', repeat(choice(/[^\\"\n]/, /\\(.|\n)/)), '"'),
      // TODO: support multiline string literals by debugging the following:
      // seq('"', repeat(choice(/[^\\"\n]/, /\\(.|\n)/)), '"', '+', /\n/, '"', repeat(choice(/[^\\"\n]/, /\\(.|\n)/)))
    )),

    _expression: $ => choice(
      $.assignment_expression,
      $.binary_expression,
      $.lambda_expression,
      $.ternary_expression,
      $.update_expression,
      $._ambiguous_name,
      $._primary,
      $.unary_expression,
      $.cast_expression
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      $.lhs,
      choice('=', '+=', '-=', '*=', '/=', '&=', '|=', '^=', '%=', '<<=', '>>=', '>>>='),
      $._expression)
    ),

    lhs: $ => choice(
      $._ambiguous_name,
      $.field_access,
      $.array_access
    ),

    // NOTE: Precedence was added due to error and duplication with
    // type_arguments.
    // TODO: Verify precedence is legit.
    binary_expression: $ => choice(
      prec.left(PREC.REL, seq(
        $._expression,
        'instanceof',
        $._class_or_interface_type
      )),
      ...[
      ['>', PREC.REL],
      ['<', PREC.REL],
      ['==', PREC.REL],
      ['>=', PREC.REL],
      ['<=', PREC.REL],
      ['!=', PREC.REL],
      ['&&', PREC.AND],
      ['||', PREC.OR],
      ['+', PREC.PLUS],
      ['-', PREC.PLUS],
      ['*', PREC.TIMES],
      ['/', PREC.TIMES],
      ['&', PREC.AND],
      ['|', PREC.OR],
      ['^', PREC.OR],
      ['%', PREC.TIMES],
      ['<<', PREC.TIMES],
      ['>>', PREC.TIMES],
      ['>>>', PREC.TIMES]
    ].map(([operator, precedence]) =>
      prec.left(precedence, seq(
        $._expression,
        operator,
        $._expression
      ))
    )),

    // TODO: test
    // Lowest precedence operator is lambda arrow
    // https://docs.oracle.com/javase/specs/jls/se9/html/jls-15.html#jls-Expression
    lambda_expression: $ => seq($._lambda_parameters, '->', $.lambda_body),

    _lambda_parameters: $ => choice(
      $.identifier,
      seq($.formal_parameters),
      $.inferred_parameters
    ),

    lambda_body: $ => choice(
      $._expression,
      $.block,
    ),

    ternary_expression: $ => prec.right(PREC.TERNARY, seq(
      $._expression, '?', $._expression, ':', $._expression
    )),

    update_expression: $ => prec.left(PREC.INC, choice(
      seq($._expression, '++'),
      seq($._expression, '--'),
      seq('++', $._expression),
      seq('--', $._expression)
    )),

    switch_statement: $ => seq(
      'switch',
      '(', $._expression, ')',
      $.switch_block
    ),

    // NOTE: switch_label precedes block_statement according to spec
    switch_block: $ => seq(
      '{',
      repeat(choice($.switch_label, $._block_statement)),
      '}'
    ),

    switch_label: $ => choice(
      seq('case', $._expression, ':'),
      seq('default', ':')
    ),

    break_statement: $ => seq('break', optional($.identifier), $._semicolon),

    return_statement: $ => seq(
      'return',
      optional($._expression),
      $._semicolon
    ),

    try_statement: $ => choice(
      seq('try', $.block, $.catches),
      seq('try', $.block, optional($.catches), $.finally),
      $.try_with_resources_statement
    ),

    try_with_resources_statement: $ => seq(
      'try',
      $.resource_specification,
      $.block,
      optional($.catches),
      optional($.finally)
    ),

    resource_specification: $ => seq(
      '(', sep1($.resource, ';'), optional(';'), ')'
    ),

    resource: $ => choice(
      seq(repeat($.modifier), $._unann_type, $.variable_declarator_id, '=', $._expression),
      $.variable_access
    ),

    if_then_else_statement: $ => prec.right(seq(
      'if', '(', $._expression, ')',
      $._statement,
      optional(seq('else', $._statement))
    )),

    while_statement: $ => seq('while', '(', $._expression, ')', $._statement),

    for_statement: $ => choice(
      $.basic_for_statement,
      $.enhanced_for_statement
    ),

    basic_for_statement: $ => seq(
      'for', '(',
      optional($.for_init), $._semicolon,
      optional($._expression), $._semicolon,
      commaSep($._expression), ')',
      $._method_statement
    ),

    for_init: $ => choice(
      commaSep1($._expression),
      $.local_variable_declaration,
    ),

    _type_arguments_or_diamond: $ => choice(
      $._type_arguments,
      '<>'
    ),

    _type_arguments: $ => seq(
      '<', commaSep1($.type_argument), '>'
    ),

    type_argument: $ => choice(
      $._type,
      $.wildcard
    ),

    wildcard: $ => seq(
      repeat($._annotation),
      '?',
      optional($._wildcard_bounds)
    ),

    _wildcard_bounds: $ => choice(
      seq('extends', $._type),
      seq($.super, $._type)
    ),

    dims: $ => prec.right(repeat1(
      seq(repeat($._annotation), '[', ']')
    )),

    integral_type: $ => choice(
      'byte',
      'short',
      'int',
      'long',
      'char'
    ),

    void_type: $ => 'void',

    _annotation: $ => choice(
      $.normal_annotation,
      $.marker_annotation,
      $.single_element_annotation
    ),

    normal_annotation: $ => seq(
      '@', $._ambiguous_name, '(', optional($.element_value_pair_list), ')',
    ),

    marker_annotation: $ => seq('@', $._ambiguous_name),

    // TODO: Replace choice($.identifier, $._literal) with $._statement once it's
    // more fleshed out; The Java spec uses element_value which infinitely loops
    single_element_annotation: $ => seq(
      '@', $._ambiguous_name, '(', choice($.identifier, $._literal, $.scoped_identifier, $.element_value), ')'
    ),

    element_value_pair_list: $ => commaSep1($.element_value_pair),

    element_value_pair: $ => prec.right(10, seq(
      $.identifier,
      '=',
      $.element_value
    )),

    element_value: $ => prec.left(1, choice(
      $._literal,
      $._ambiguous_name, // TODO: verify this, not accounted for in spec
      $.element_value_array_initializer,
      $._annotation
    )),

    class_declaration: $ => seq(
      repeat($.modifier),
      'class',
      $.identifier,
      optional($.type_parameters),
      optional($.superclass),
      optional($.super_interfaces),
      $.class_body
    ),

    modifier: $ => choice(
      $._annotation,
      'public',
      'protected',
      'private',
      'abstract',
      'static',
      'final',
      'strictfp',
      'default',
      'synchronized',
      'native',
      'transient',
      'volatile'
    ),

    type_parameters: $ => seq(
      '<', commaSep1($.type_parameter), '>'
    ),

    type_parameter: $ => seq(
      repeat($._annotation),
      $.identifier,
      optional($.type_bound)
    ),

    class_body: $ => seq(
      '{',
      repeat($._class_body_declaration),
      '}'
    ),

    _class_body_declaration: $ => choice(
      $._class_member_declaration,
      $.block,
      $.static_initializer,
      $.constructor_declaration
    ),

    constructor_declaration: $ => seq(
      repeat($.modifier),
      $.constructor_declarator,
      optional($.throws),
      $.constructor_body
    ),

    constructor_declarator: $ => seq(
      optional($.type_parameters),
      $.identifier,
      $.formal_parameters
    ),

    constructor_body: $ => seq(
      '{',
      optional($.explicit_constructor_invocation),
      repeat($._block_statement),
      '}'
    ),

    _ambiguous_name: $ => prec(PREC.REL + 1, choice(
      $.identifier,
      $._reserved_identifier,
      $.scoped_identifier
    )),

    scoped_identifier: $ => seq(
      choice($.identifier, $._reserved_identifier, $.scoped_identifier),
      '.',
      $.identifier
    ),

    field_declaration: $ => seq(
      repeat($.modifier),
      $._unann_type,
      $.variable_declarator_list,
      $._semicolon
    ),

    _primary: $ => choice(
      $._primary_no_new_array,
      $.array_creation_expression
    ),

    class_instance_creation_expression: $ => choice(
      $.unqualified_class_instance_creation_expression,
      seq($._ambiguous_name, '.', $.unqualified_class_instance_creation_expression),
      seq($._primary, '.', $.unqualified_class_instance_creation_expression)
    ),

    unqualified_class_instance_creation_expression: $ => prec.right(seq(
      'new',
      optional($._type_arguments),
      choice($._primitive_type, $._class_or_interface_type),
      '(', optional($.argument_list), ')',
      optional($.class_body)
    )),

    method_invocation: $ => choice(
      seq($.identifier, $._parenthesized_argument_list),
      seq($._reserved_identifier, $._parenthesized_argument_list),
      seq($._ambiguous_name, '.', optional($._type_arguments), $.identifier, $._parenthesized_argument_list),
      seq($._primary, '.', optional($._type_arguments), $.identifier, $._parenthesized_argument_list),
      seq($.super, '.', optional($._type_arguments), $.identifier, $._parenthesized_argument_list),
      seq($._ambiguous_name, '.', $.super, '.', optional($._type_arguments), $.identifier, $._parenthesized_argument_list)
    ),

    argument_list: $ => seq(
      $._expression, repeat(seq(',', $._expression))
    ),

    _parenthesized_argument_list: $ => seq('(', optional($.argument_list), ')'),

    method_reference: $ => seq(
      choice($._ambiguous_name, $.array_type, $.generic_type, $._primary),
      '::',
      optional($._type_arguments),
      choice('new', $.identifier)
    ),

    variable_declarator_list: $ => seq(
      $.variable_declarator,
      repeat(seq(',', $.variable_declarator))
    ),

    variable_declarator: $ => seq(
      $.variable_declarator_id,
      optional(seq('=', $._variable_initializer))
    ),

    variable_declarator_id: $ => seq(
      choice($.identifier, $._reserved_identifier),
      optional($.dims)
    ),

    _variable_initializer: $ => choice(
      $._expression,
      $.array_initializer
    ),

    _type: $ => choice(
      $._unann_type,
      $.annotated_type
    ),

    _unann_type: $ => choice(
      $._primitive_type,
      $.identifier,
      $._class_or_interface_type,
      $.array_type
    ),

    _primitive_type: $ => choice(
      $.void_type,
      $._numeric_type,
      $.boolean_type,
    ),

    _class_or_interface_type: $ => choice(
      prec(PREC.REL + 1, alias($.identifier, $.type_identifier)),
      $.scoped_type_identifier,
      $.generic_type
    ),

    scoped_type_identifier: $ => seq(
      choice(
        alias($.identifier, $.type_identifier),
        $.scoped_type_identifier,
        $.generic_type
      ),
      '.',
      repeat($._annotation),
      alias($.identifier, $.type_identifier)
    ),

    generic_type: $ => prec(PREC.REL + 1, seq(
      choice(
        alias($.identifier, $.type_identifier),
        $.scoped_type_identifier
      ),
      $._type_arguments_or_diamond
    )),

    array_type: $ => seq(
      $._unann_type,
      $.dims
    ),

    method_header: $ => choice(
      seq($._unann_type, $.method_declarator, optional($.throws)),
      seq($.type_parameters, repeat($._annotation), $._unann_type, $.method_declarator, optional($.throws))
    ),

    method_declarator: $ => seq(
      choice($.identifier, $._reserved_identifier),
      $.formal_parameters,
      optional($.dims)
    ),

    formal_parameter: $ => seq(
      repeat($.modifier),
      $._unann_type,
      $.variable_declarator_id
    ),

    method_body: $ => choice(
      $.block,
      $._semicolon
    ),

    block: $ => seq(
      '{', repeat($._block_statement), '}'
    ),

    _block_statement: $ => choice(
      $.local_variable_declaration_statement,
      $.class_declaration,
      $._statement
    ),

    local_variable_declaration_statement: $ => seq(
      $.local_variable_declaration,
      $._semicolon
    ),

    local_variable_declaration: $ => seq(
      repeat($.modifier),
      $._unann_type,
      $.variable_declarator_list
    ),

    method_declaration: $ => seq(
      repeat($.modifier),
      $.method_header,
      $.method_body
    ),

    _reserved_identifier: $ => alias(choice(
      'open',
      'module'
    ), $.identifier),

    identifier: $ => /[a-zA-Z_]\w*/,

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    comment: $ => token(prec(PREC.COMMENT, choice(
      seq('//', /.*/),
      seq(
        '/*',
        /[^*]*\*+([^/*][^*]*\*+)*/,
        '/'
      )
    ))),
  }
});

function sep1 (rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)))
}

function commaSep(rule) {
  return optional(commaSep1(rule))
}
